create and get the each interview individually based on the userId and sesionId
